--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
             <h2 id="event-name">Event Name</h2>
             <h3 id="event-meta">Date | Location</h3>
             <div><span id="session-type" class="session-badge">Session</span></div>
+            <div class="progress-info">
+                <div class="step-indicator" id="step-indicator">0 / 0</div>
+                <div class="progress-container">
+                    <div class="progress-bar" id="progress-bar"></div>
+                </div>
+            </div>
         </header>
 
         <main id="chart-container">
@@ -22,12 +28,8 @@
         </main>
 
         <footer>
-            <div class="progress-container">
-                <div class="progress-bar" id="progress-bar"></div>
-            </div>
             <div class="controls">
                 <button id="btn-prev" disabled>Previous</button>
-                <div class="step-indicator" id="step-indicator">0 / 0</div>
                 <button id="btn-next">Next</button>
             </div>
         </footer>
