Trying again to fix next/prev

--- a/index.html
+++ b/index.html
@@ -15,11 +15,10 @@
             <h2 id="event-name">Event Name</h2>
             <h3 id="event-meta">Date | Location</h3>
             <div><span id="session-type" class="session-badge">Session</span></div>
-            <div class="progress-info">
+            <div class="controls header-controls">
+                <button id="btn-prev" disabled>Previous</button>
                 <div class="step-indicator" id="step-indicator">0 / 0</div>
-                <div class="progress-container">
-                    <div class="progress-bar" id="progress-bar"></div>
-                </div>
+                <button id="btn-next">Next</button>
             </div>
         </header>
 
@@ -28,9 +27,8 @@
         </main>
 
         <footer>
-            <div class="controls">
-                <button id="btn-prev" disabled>Previous</button>
-                <button id="btn-next">Next</button>
+            <div class="progress-container">
+                <div class="progress-bar" id="progress-bar"></div>
             </div>
         </footer>
     </div>
