Huge fixes and re-renders.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
                 </select>
                 Season
             </h1>
+            <nav class="main-nav">
+                <a href="index.html" class="active">Standings</a>
+                <a href="rankings.html">Rankings Graph</a>
+            </nav>
             <h2 id="event-name">Event Name</h2>
             <h3 id="event-meta">Date | Location</h3>
             <div><span id="session-type" class="session-badge">Session</span></div>
